# webcam_streamer

./: Cargo.toml  README.md
src/: client.rs  lib.rs  main.rs  shared.rs  streamer.rs  yuyv2rgb.rs
webcam_viewer_base/: Cargo.toml
webcam_viewer_base/src/: lib.rs  yuyv2rgb.rs
webcam_viewer_client/: Cargo.toml  README.md  index.html
webcam_viewer_client/src/: app.rs  main.rs
webcam_viewer_joint/: Cargo.toml
webcam_viewer_joint/src/: main.rs
webcam_viewer_local/: Cargo.toml
webcam_viewer_local/src/: main.rs
webcam_viewer_streamer/: Cargo.toml
webcam_viewer_streamer/src/: main.rs
