[package]
name = "webcam_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "streamer"
path = "src/streamer.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
chrono = "0.4.31"
eframe = "0.23.0"
egui = "0.23.0"
ndarray = "0.15.6"
rayon = "1.8.0"
v4l = "0.14.0"
