[package]
name = "webcam_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
ndarray = { version = "0.15.6", optional = true }
rayon = { version = "1.8.0", optional = true }

[features]
yuyv2rgb = ["ndarray", "rayon"]

[workspace]
members = [
  "webcam_viewer_client",
  "webcam_viewer_streamer",
  "webcam_viewer_local",
]
