[package]
name = "webcam_viewer_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webcam_viewer = { path = "..", features = ["yuyv2rgb"] }
eframe = { version = "0.24", default-features = false, features = [
  "glow",
  "default_fonts",
] }
egui = "0.24"
egui_inspect = { git = "https://github.com/dmirauta/egui_inspect", branch = "0_24" }
log = "0.4"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
