[package]
name = "webcam_viewer_streamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webcam_viewer_base = { path = "../webcam_viewer_base" }
clap = { version = "4.4", features = ["derive"] }
v4l = "0.14.0"
